Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-536

Sock handle and mem leak in axis2_soap_over_http_sender_send

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 1.0.0
    • core/transport
    • None
    • All

    Description

      soap_over_http_sender owns an http_client (sender_impl->client). This http_client is not being free'd, which is causing a socket handle leak along with a significant amount of memory. The socket handle leak is particularly worrisome, as the system will eventually run out of handles, and quickly if processing high volumes of requests. Further details have been posted to the mailing list.

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            jaredhanson Jared Hanson
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: