Fixed memory leak due to not freeing client - AXIS2C-536