modules/core/transport/http/sender/http_sender.c
@@ -240,17 +240,16 @@ axis2_http_sender_send(
 
 	if (!send_via_get)
 	{
+        axis2_property_t *property = NULL;
 
 		/* We put the client into msg_ctx so that we can free it once the processing
 		 * is done at client side
 		 */
-		/*property = axis2_property_create(env);
-		  axis2_property_set_scope(property, env, AXIS2_SCOPE_REQUEST);
-		  axis2_property_set_free_func(property, env,
-		  axis2_http_client_free_void_arg);
-		  axis2_property_set_value(property, env, sender->client);
-		   axis2_msg_ctx_set_property(msg_ctx, env, AXIS2_HTTP_CLIENT,
-		  property);*/
+        property = axis2_property_create(env);
+        axis2_property_set_scope(property, env, AXIS2_SCOPE_REQUEST);
+        axis2_property_set_free_func(property, env, axis2_http_client_free_void_arg);
+        axis2_property_set_value(property, env, sender->client);
+        axis2_msg_ctx_set_property(msg_ctx, env, AXIS2_HTTP_CLIENT, property);
 
 		doing_mtom =  axis2_msg_ctx_get_doing_mtom(msg_ctx, env);
 
